--- a/source/stylesheets/barchart.scss
+++ b/source/stylesheets/barchart.scss
@@ -1,12 +1,30 @@
 body {
   font-size: 100%;
-}
-
-#canvas {
-
   // Fonts.
   font-family: Arial;
   font-size: 25px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.tooltip {
+  position: absolute;
+  border: solid 1px #CCCCCC;
+  background-color: #FFFFFF;
+
+  margin: 25px;
+  padding: 5px;
+
+  min-width: 200px ;
+  height: auto;
+
+  font-size: 15px;
+}
+#canvas {
+
+
 
   // Individual bar on bar graph.
   .graph-bar {
