Stored axis and graph titles in an object rather in-line d3, styled the chart

--- a/source/stylesheets/scatterplot.scss
+++ b/source/stylesheets/scatterplot.scss
@@ -1,3 +1,15 @@
 #canvas {
   border: solid 1px black;
+
+  font-family: 'Arial', sans-serif;
+  font-size: 100%;
+
+  .axis-title {
+    font-size: 25px;
+  }
+
+  .graph-title {
+    font-size: 35px;
+  }
+
 }
