--- a/source/stylesheets/heatmap.scss
+++ b/source/stylesheets/heatmap.scss
@@ -1,3 +1,38 @@
+body {
+    font-family: 'Arial', sans-serif;
+    font-size: 100%;
+}
+
 #canvas {
-  border: solid 1px black;
+
+  // Graph axis title font-size.
+  .axis-title { font-size: 25px; };
+
+  // Graph title font size.
+  .graph-title { font-size: 35px; };
+
+}
+
+.tooltip {
+  position: absolute;
+  border: solid 1px #CCCCCC;
+  background-color: #FFFFFF;
+
+  visibility: hidden;
+
+  margin: 25px;
+  padding: 5px;
+
+  min-width: 200px ;
+  height: auto;
+
+  // Tooltip font size.
+  font-size: 14px;
+
+  // Tooltip items spacing and alignment.
+  div {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
 }
