--- a/source/stylesheets/geomap.scss
+++ b/source/stylesheets/geomap.scss
@@ -12,3 +12,19 @@ body {
 #canvas {
   border: solid 1px black;
 }
+
+.tooltip {
+  position: absolute;
+  border: solid 1px #CCCCCC;
+  background-color: #FFFFFF;
+
+  visibility: hidden;
+
+  margin: 25px;
+  padding: 5px;
+
+  min-width: 200px ;
+  height: auto;
+
+  font-size: 15px;
+}
