--- a/source/stylesheets/stylesheet.scss
+++ b/source/stylesheets/stylesheet.scss
@@ -10,12 +10,13 @@ body {
   margin: 0 auto;
 
   .section-title {
-    padding: 25px;
+    padding: 5px;
   }
 
   .container-chart {
     border: solid 1px #333333;
-    margin: 1px;
+    margin: 10px;
+    font-size: 1.25em;
 
     a {
       padding: 25px;
