--- a/source/stylesheets/forcegraph.scss
+++ b/source/stylesheets/forcegraph.scss
@@ -1,3 +1,12 @@
 #canvas {
-  border: solid 1px black;
+
+  // Center alignment.
+  display: block;
+  margin: 0 auto;
+
+  // Border and padding.
+  border: solid 1px #333333;
+  padding: 100px;
+
+
 }
