--- a/source/stylesheets/geomap.scss
+++ b/source/stylesheets/geomap.scss
@@ -10,7 +10,15 @@ body {
 }
 
 #canvas {
-  border: solid 1px black;
+  
+  // Center alignment.
+  display: block;
+  margin: 0 auto;
+
+  // Border and padding.
+  border: solid 1px #333333;
+  padding: 100px;
+
 }
 
 .tooltip {
